6829
Paul's test case from source:

{noformat}
commit 3511e5960d510eafcb67c388ec0b5b60aafdd8f3
Author: Paul Phillips <paulp@improving.org>
Date:   Fri May 11 11:06:55 2012 -0700

    Test case closes SI-5165.

    Also fixed by annotation/enum commit.

commit 807567230852bcadb98a91322bd348aae764801f
Author: Paul Phillips <paulp@improving.org>
Date:   Fri May 11 10:25:34 2012 -0700

    Recognize java enums as constants from source.

    Fixed up one of the mismatches between how java source is modeled
    and how java bytecode is modeled.  We should get the rest of them
    too.  Closes SI-2764.
{noformat}

Looks like this started working in:

{noformat}
commit dc6a49337f072686516c14f50b847c38cbc6c225
Author: Miguel Garcia <miguelalfredo.garcia@epfl.ch
Date:   Fri Jul 6 17:06:57 2012 +0200

    GenASM becomes default backend, 1.5 classfiles
{noformat}

{noformat}
% (export V=dc6a493; rm *.class; javac -d . test/files/pos/t5165b/TestAnnotation_1.java && scalac-hash $V test/files/pos/t5165b/TestTrait_2.scala && scalac-hash $V test/files/pos/t5165b/TestObject_3.scala)

% (export V=dc6a493~1; rm *.class; javac -d . test/files/pos/t5165b/TestAnnotation_1.java && scalac-hash $V test/files/pos/t5165b/TestTrait_2.scala && scalac-hash $V test/files/pos/t5165b/TestObject_3.scala 2>&1 | tail -n 8)
 self-type TestObject.type does not conform to TestTrait's selftype TestTrait
object TestObject extends TestTrait
                          ^
test/files/pos/t5165b/TestObject_3.scala:2: error: TestTrait does not have a constructor
object TestObject extends TestTrait
                  ^
two warnings found
5 errors found

% for i in 10.0 10.2 10.3 11.0-M8; do (export V=v2.$i; rm *.class; javac -d . test/files/pos/t5165b/TestAnnotation_1.java && scalac-hash $V test/files/pos/t5165b/TestTrait_2.scala && scalac-hash $V test/files/pos/t5165b/TestObject_3.scala); done
[warn] v2.11.0-M8 failed, using closest available
[warn] v2.11.0-M8 failed, using closest available
{noformat}

I've submitted a test case to keep it fixed. This test case used the same compilation order as reported above: https://github.com/scala/scala/pull/3548
